Fixed sticky footer on IE10, Added opacity styles for mobile menu icon, Added Google Analytics

--- a/sass/components/navigation/partials/_mobile-nav.scss
+++ b/sass/components/navigation/partials/_mobile-nav.scss
@@ -39,8 +39,15 @@
     a {
       height: 48px;
       line-height: 1;
+      opacity: 0.75;
       padding: 0;
       width: 48px;
+
+      /* Make full opacity on hover */
+      &:active,
+      &:hover {
+        opacity: 1;
+      }
     }
 
     /* Styles for list item icons */
